Document on the JPMS arguments required (close #332)